First Section: this part was correctly spaced and wrapped, with right calc for width and container enlarged with -0.75 rem for left and right margins

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,8 @@
      .cards {
         display: flex;
         flex-wrap: wrap;
+        margin-left: -0.75rem;
+        margin-right: -0.75rem;
        
     }
 
@@ -79,13 +81,12 @@
     }
 
     .cards .card:first-child{
-        width: calc(66%);
+        width: calc(66.666% - 1.5rem);
     }
 
-
-
-
-
+    .cards .card:first-child{
+    background-color: var(--light-blue-color);
+}
 }
 
 /******Desktop******/
